--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "tether": "^1.4.3"
   }
 }
